# wise-old-man-cli

./: .gitignore  Cargo.toml  README.md
sample_data/: achievements.json  player.json  search.json
src/: api.rs  groups.rs  main.rs  players.rs  search.rs
