[package]
name = "wom"
description = "A CLI interface to the Wise Old Man Runescape stats API"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/austinmehmet/terrafarm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
openssl = { version = "0.10", features = ["vendored"] }
prettytable-rs = "^0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"